# OpenCNCController

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
cmake/: OpenCNCConfig.cmake.in
comm/: CMakeLists.txt  README.md
comm/include/: cnc_comm.h  cnc_protocol.h
comm/src/: cnc_comm.cpp
config/: CMakeLists.txt  README.md  machine.toml
config/include/: cnc_config.h
config/src/: config_test.cpp
examples/: CMakeLists.txt  README.md
examples/qt5/: CMakeLists.txt  example_qt5.cpp
examples/win32/: CMakeLists.txt  example_win32.cpp
firmware/: README.md
firmware/axis_node_rp2040/: CMakeLists.txt  README.md
firmware/axis_node_rp2040/include/: mcp2518fd.h
firmware/axis_node_rp2040/src/: main.c  mcp2518fd.c
firmware/axis_node_stm32/: CMakeLists.txt  README.md
firmware/axis_node_stm32/Core/Inc/: canopen_slave.h  main.h  stepper_control.h  stm32g4xx_hal_conf.h
firmware/axis_node_stm32/Core/Src/: canopen_slave.c  main.c  stepper_control.c
firmware/common/: hal_common.h
firmware/common/canopen/: auto_assign.h  canopen_types.h  cia402.h  nmt.h  node_config.h  node_config.toml  pdo.h  sdo.h
firmware/esp32/: CMakeLists.txt  README.md
firmware/esp32/main/: CMakeLists.txt  main.c
firmware/esp32_p4_controller/: CMakeLists.txt  README.md
firmware/esp32_p4_controller/main/: CMakeLists.txt  Kconfig.projbuild  canopen_master.c  canopen_master.h  display_task.c  display_task.h  eth_comm.c  eth_comm.h  main.c  standalone_mode.c  standalone_mode.h  trajectory_task.c  trajectory_task.h
firmware/fpga/: README.md
firmware/fpga/rtl/: cnc_top.v  step_generator.v
firmware/pico/: CMakeLists.txt  README.md
firmware/pico/src/: main.c
firmware/pico_test_fixture/: CMakeLists.txt  README.md  tusb_config.h
firmware/pico_test_fixture/include/: test_fixture.h
firmware/pico_test_fixture/src/: button_handler.c  button_handler.h  display.c  display.h  emulator.c  emulator.h  main.c  protocol_handler.c  protocol_handler.h  usb_descriptors.c
firmware/stm32/: README.md
firmware/stm32/Core/Src/: main.c
gcode_parser/: CMakeLists.txt  README.md
gcode_parser/include/: ngc_canon.h  ngc_parser.h
gcode_parser/src/: ngc_parser.cpp
hmi/: CMakeLists.txt  README.md
hmi/include/: opencnc_hmi.h
hmi/linux/: README.md
tests/: CMakeLists.txt  config_tests.cpp  parser_tests.cpp  planner_tests.cpp  protocol_tests.cpp
trajectory_planner/: CMakeLists.txt  README.md
trajectory_planner/include/: traj_planner.h  traj_queue.h  traj_segment.h
trajectory_planner/src/: traj_planner.cpp
